config/testreport/css/default.css
/* ... */
tr:hover td.p70, tr:hover td.p71, tr:hover td.p72, tr:hover td.p73, tr:hover td.p74, tr:hover td.p75, tr:hover td.p76, tr:hover td.p77, tr:hover td.p78, tr:hover td.p79 { background: linear-gradient(rgb(154,189,154), rgba(0,0,0,0), rgb(154,189,154)) !important; }
tr:hover td.p80, tr:hover td.p81, tr:hover td.p82, tr:hover td.p83, tr:hover td.p84, tr:hover td.p85, tr:hover td.p86, tr:hover td.p87, tr:hover td.p88, tr:hover td.p89 { background: linear-gradient(rgb(139,179,139), rgba(0,0,0,0), rgb(139,179,139)) !important; }
tr:hover td.p90, tr:hover td.p91, tr:hover td.p92, tr:hover td.p93, tr:hover td.p94, tr:hover td.p95, tr:hover td.p96, tr:hover td.p97, tr:hover td.p98, tr:hover td.p99 { background: linear-gradient(rgb(125,170,125), rgba(0,0,0,0), rgb(125,170,125)) !important; }
tr:hover td.p100                                                                                                                                                         { background: linear-gradient(rgb(110,160,110), rgba(0,0,0,0), rgb(110,160,110)) !important; }

tr:hover td.n1 , tr:hover td.n2 , tr:hover td.n3 , tr:hover td.n4 , tr:hover td.n5 , tr:hover td.n6 , tr:hover td.n7 , tr:hover td.n8 , tr:hover td.n9                             { background: linear-gradient(rgb(253,248,248), rgba(0,0,0,0), rgb(253,248,248)) !important; }
tr:hover td.n10 , tr:hover td.n11 , tr:hover td.n12 , tr:hover td.n13 , tr:hover td.n14 , tr:hover td.n15 , tr:hover td.n16 , tr:hover td.n17 , tr:hover td.n18 , tr:hover td.n19  { background: linear-gradient(rgb(250,242,242), rgba(0,0,0,0), rgb(250,242,242)) !important; }
tr:hover td.n20 , tr:hover td.n21 , tr:hover td.n22 , tr:hover td.n23 , tr:hover td.n24 , tr:hover td.n25 , tr:hover td.n26 , tr:hover td.n27 , tr:hover td.n28 , tr:hover td.n29  { background: linear-gradient(rgb(244,228,228), rgba(0,0,0,0), rgb(244,228,228)) !important; }
tr:hover td.n30 , tr:hover td.n31 , tr:hover td.n32 , tr:hover td.n33 , tr:hover td.n34 , tr:hover td.n35 , tr:hover td.n36 , tr:hover td.n37 , tr:hover td.n38 , tr:hover td.n39  { background: linear-gradient(rgb(239,215,215), rgba(0,0,0,0), rgb(239,215,215)) !important; }
tr:hover td.n40 , tr:hover td.n41 , tr:hover td.n42 , tr:hover td.n43 , tr:hover td.n44 , tr:hover td.n45 , tr:hover td.n46 , tr:hover td.n47 , tr:hover td.n48 , tr:hover td.n49  { background: linear-gradient(rgb(233,201,201), rgba(0,0,0,0), rgb(233,201,201)) !important; }
tr:hover td.n50 , tr:hover td.n51 , tr:hover td.n52 , tr:hover td.n53 , tr:hover td.n54 , tr:hover td.n55 , tr:hover td.n56 , tr:hover td.n57 , tr:hover td.n58 , tr:hover td.n59  { background: linear-gradient(rgb(228,188,188), rgba(0,0,0,0), rgb(228,188,188)) !important; }
tr:hover td.n60 , tr:hover td.n61 , tr:hover td.n62 , tr:hover td.n63 , tr:hover td.n64 , tr:hover td.n65 , tr:hover td.n66 , tr:hover td.n67 , tr:hover td.n68 , tr:hover td.n69  { background: linear-gradient(rgb(222,174,174), rgba(0,0,0,0), rgb(222,174,174)) !important; }
tr:hover td.n70 , tr:hover td.n71 , tr:hover td.n72 , tr:hover td.n73 , tr:hover td.n74 , tr:hover td.n75 , tr:hover td.n76 , tr:hover td.n77 , tr:hover td.n78 , tr:hover td.n79  { background: linear-gradient(rgb(217,161,161), rgba(0,0,0,0), rgb(217,161,161)) !important; }
tr:hover td.n80 , tr:hover td.n81 , tr:hover td.n82 , tr:hover td.n83 , tr:hover td.n84 , tr:hover td.n85 , tr:hover td.n86 , tr:hover td.n87 , tr:hover td.n88 , tr:hover td.n89  { background: linear-gradient(rgb(211,147,147), rgba(0,0,0,0), rgb(211,147,147)) !important; }
tr:hover td.n90 , tr:hover td.n91 , tr:hover td.n92 , tr:hover td.n93 , tr:hover td.n94 , tr:hover td.n95 , tr:hover td.n96 , tr:hover td.n97 , tr:hover td.n98 , tr:hover td.n99  { background: linear-gradient(rgb(206,134,134), rgba(0,0,0,0), rgb(206,134,134)) !important; }
tr:hover td.n100                                                                                                                                                                   { background: linear-gradient(rgb(200,120,120), rgba(0,0,0,0), rgb(200,120,120)) !important; }


.added    { color: #888 !important; }
.removed  { color: #888 !important; }

.infinity {
    background-color: rgb(200,120,120) !important;
    /* The infinity symbol is rather small, so we use a larger font size for it, however, without increasing the height of the table cell. */
    font-size: 1.3rem;
    line-height: 0;
}
tr:hover .infinity { background: linear-gradient(rgb(200,120,120), rgba(0,0,0,0), rgb(200,120,120)) !important; }


/*
 * ----------------------------------------------------
 * Apdex color coding
 * ----------------------------------------------------
 */
.apdex              { white-space: nowrap; }
.apdex-excellent    { background-color: rgb(110,160,110) !important; }
.apdex-good         { background-color: rgb(154,189,154) !important; }
.apdex-fair         { background-color: #e0b669          !important; }
.apdex-poor         { background-color: rgb(217,161,161) !important; }
.apdex-unacceptable { background-color: rgb(200,120,120) !important; }

/*
 * ----------------------------------------------------
 * Web Vitals
 * ----------------------------------------------------
 */
.web-vital {
}

.web-vital .score {
    display: flex; 
    position: relative; 
    width: 0; 
    left: 75%; 
    justify-content: center; 
    white-space: nowrap;
    font-weight: bold;
}

.web-vital .score.good { 
    color: var(--web-vital-color-good);
}

.web-vital .score.improve { 
    color: var(--web-vital-color-improve);   
}

.web-vital .score.poor {
    color: var(--web-vital-color-poor);   
}

.web-vital .marker {
    display: flex; 
    position: relative; 
    width: 0; 
    left: 75%; 
    justify-content: center; 
}

.web-vital .marker .arrow {
    width: 0; 
    height: 0; 
    border-left: 4px solid transparent; 
    border-right: 4px solid transparent; 
    border-top: 4px solid grey; /* border color will be adjusted via class */
}
/* ... */

